crates/solidity/testing/snapshots/bindings_output/built_ins/erc7201/generated/v1/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected IsKeyword or OpenBrace.
   ╭─[input.sol:1:20]
   │
 1 │ ╭─▶ contract MyContract layout at erc7201("openzeppelin.storage.MyContract") { // added in 0.8.35
   ┆ ┆   
 4 │ ├─▶ }
   │ │       
   │ ╰─────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract MyContract layout at erc7201("openzeppelin.storage.MyContract") { // added in 0.8.35
   │          ─────┬────  
   │               ╰────── name: 1
───╯
Definiens: 
   ╭─[input.sol:1:1]
   │
 1 │ contract MyContract layout at erc7201("openzeppelin.storage.MyContract") { // added in 0.8.35
   │ ─────────┬─────────  
   │          ╰─────────── definiens: 1
───╯
